--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "dev": "cross-env node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "cloud": "gulp cloud:dev",
+    "server": "nodemon ./server/index.js"
   },
   "dependencies": {
+    "@types/express": "^4.16.0",
     "debug": "^3.1.0",
     "mpvue": "^1.0.13",
     "vue": "^2.5.16",
@@ -47,10 +50,13 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "gulp": "^3.9.1",
+    "gulp-jdists": "^2.2.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "minimist": "^1.2.0",
     "mpvue-entry": "^1.4.7",
     "mpvue-loader": "^1.1.2",
     "mpvue-template-compiler": "^1.0.13",
@@ -63,6 +69,7 @@
     "postcss-mpvue-wxss": "^1.0.0",
     "px2rpx-loader": "^0.1.8",
     "rimraf": "^2.6.0",
+    "run-sequence": "^2.2.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "tencent-wx-app": "^1.1.201712221707",
