--- a/package.json
+++ b/package.json
@@ -61,18 +61,24 @@
     "mpvue-loader": "^1.1.2",
     "mpvue-template-compiler": "^1.0.13",
     "mpvue-webpack-target": "^1.0.1",
+    "node-sass": "^4.9.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.16",
     "postcss-loader": "^2.0.6",
     "postcss-mpvue-wxss": "^1.0.0",
+    "promise-polyfill": "^8.1.0",
     "px2rpx-loader": "^0.1.8",
     "rimraf": "^2.6.0",
     "run-sequence": "^2.2.1",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "tencent-wx-app": "^1.1.201712221707",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.6.0",
     "typescript": "^2.7.2",
     "url-loader": "^0.5.8",
     "vue-style-loader": "^3.0.1",
