--- a/src/app.json
+++ b/src/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/weather/main",
+    "pages/diary/main",
     "pages/index/main",
     "pages/logs/main",
     "pages/counter/main",
@@ -23,5 +24,11 @@
     "connectSocket": 10000,
     "uploadFile": 10000,
     "downloadFile": 10000
+  },
+  "plugins": {
+    "calendar": {
+      "version": "1.1.3",
+      "provider": "wx92c68dae5a8bb046"
+    }
   }
 }
