feat: 添加了vuex插件
1、添加了vuex来保存管理全局状态。2、修复了mock-server中天气接口返回背景图片路径不对的问题。

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mpvue": "^1.0.13",
     "vue": "^2.5.16",
     "vue-property-decorator": "^7.0.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vuex-class": "^0.3.1"
   },
   "devDependencies": {
     "@types/node": "^9.4.7",
